--- a/login.css
+++ b/login.css
@@ -37,23 +37,14 @@ main {
 }
 .logo {
     width: 150px;
-    margin: 30px 0;
+    margin: 50px 0;
     display: none;
-}
-.title {
-    font-size: var(--lg);
-}
-.subtitle {
-    font-weight: 300;
-    font-size: var(--md);
-    color: var(--very-light-pink);
-    margin-top: 0;
-    margin-bottom: 40px;
 }
 form {
     display: flex;
     flex-direction: column;
     width: 100%;
+    position: relative;
 }
 .label {
     font-size: var(--md);
@@ -66,7 +57,7 @@ form {
     padding: 10px;
     border: none;
     border-radius: 8px;
-    margin-bottom: 8px;
+    margin-bottom: 13px;
     font-size: var(--sm);
 }
 .buttom {
@@ -77,9 +68,36 @@ form {
     color: var(--text-input-field);
     cursor: pointer;
     border-radius: 8px;
+    margin-bottom: 20px;
+}
+form a {
+    font-size: var(--sm);
+    color: var(--hospital-green);
+    text-align: center;
+    text-decoration: none;
+}
+form button {
+    height: 40px;
+    width: 100%;
+    position: absolute;
+    top: 400px;
+    background-color: var(--white);
+    border: 1px solid var(--hospital-green);
+    height: 40px;
+    font-size: var(--md);
+    font-weight: bold;
+    color: var(--hospital-green);
+    cursor: pointer;
+    border-radius: 8px;
+    margin-bottom: 20px;
 }
 @media (max-width: 720px) {
     .logo {
         display: block;
+    }
+}
+@media (min-width: 721px) {
+    form button {
+        top: 350px;
     }
 }
