--- a/micuenta.css
+++ b/micuenta.css
@@ -33,22 +33,14 @@ main {
     width: 350px;
     align-self: center;
     align-items: center;
-    flex-wrap: wrap;
 }
-.logo {
-    width: 150px;
-    margin: 30px 0;
-    display: none;
+.container-form div {
+    display: flex;
+    flex-direction: column;
 }
 .title {
     font-size: var(--lg);
-}
-.subtitle {
-    font-weight: 300;
-    font-size: var(--md);
-    color: var(--very-light-pink);
-    margin-top: 0;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 form {
     display: flex;
@@ -66,20 +58,26 @@ form {
     padding: 10px;
     border: none;
     border-radius: 8px;
-    margin-bottom: 8px;
+    margin-bottom: 15px;
     font-size: var(--sm);
+    width: 330px;
 }
 .buttom {
     background-color: var(--hospital-green);
     border: none;
     height: 40px;
+    width: 100%;
     font-size: var(--md);
     color: var(--text-input-field);
     cursor: pointer;
     border-radius: 8px;
 }
 @media (max-width: 720px) {
-    .logo {
-        display: block;
+    .container-form {
+        height: 100%;
+        justify-content: space-around;
+    }
+    .container-form div {
+        display: flex;
     }
 }
